crud basico cargo....

--- a/heystyles-usuarios-api/src/main/resources/messages.properties
+++ b/heystyles-usuarios-api/src/main/resources/messages.properties
@@ -1,2 +1,3 @@
 heystyles.usuarios.persona.not-found=No se encontro una persona el id ''{0}''.
-heystyles.usuarios.proveedor.not-found=No se encontro el proveedor con id ''{0}'';
+heystyles.usuarios.proveedor.not-found=No se encontro el proveedor con id ''{0}''.
+heystyles.usuarios.cargo.not-found=No se encontro el cargo con id ''{0}''.
