implementacion crud usuarios....

--- a/heystyles-usuarios-api/src/main/resources/messages.properties
+++ b/heystyles-usuarios-api/src/main/resources/messages.properties
@@ -1,3 +1,15 @@
+heystyles.commons.not.found=Recurso no encontrado.
+heystyles.commons.duplicated=Hay objetos duplicados.
+heystyles.commons.not.found.object=El objeto con id ''{0}'' no fue encontrado.
+heystyles.commons.validation.message.default=Se generaron errores de validación.
+heystyles.commons.validation.json.invalid=No se pudo parsear el json de la petición.
+heystyles.commons.validation.enum.invalid=El valor ''{0}'' no es valido.
+heystyles.commons.error.db.connection=No es posible conectar a la base de datos.
+heystyles.commons.error.db.constraints=No se puede procesar debido a restricciones de la base de datos.
+heystyles.commons.error.unexpected=Ocurrio un error inesperado.
+heystyles.commons.error.converter.not-found=No se encontro un converter para la entidad y el objeto de retorno.
+
 heystyles.usuarios.persona.not-found=No se encontro una persona el id ''{0}''.
 heystyles.usuarios.proveedor.not-found=No se encontro el proveedor con id ''{0}''.
 heystyles.usuarios.cargo.not-found=No se encontro el cargo con id ''{0}''.
+heystyles.usuarios.usuario.not-found=No se encontro el usuario con id ''{0}''.
