cambios fecha "2019-10-26" 7:34 pm ....

--- a/heystyles-usuarios-api/src/main/resources/messages.properties
+++ b/heystyles-usuarios-api/src/main/resources/messages.properties
@@ -13,3 +13,6 @@ heystyles.usuarios.persona.not-found=No se encontro una persona el id ''{0}''.
 heystyles.usuarios.proveedor.not-found=No se encontro el proveedor con id ''{0}''.
 heystyles.usuarios.cargo.not-found=No se encontro el cargo con id ''{0}''.
 heystyles.usuarios.usuario.not-found=No se encontro el usuario con id ''{0}''.
+heystyles.persona.numero-documento.duplicated=Ya hay una Persona registrada con el mismo numero de documento ''{0}''.
+heystyles.persona.email.duplicated=Ya hay una Persona registrada con el mismo email ''{0}''.
+heystyles.cargo.nombre.duplicated=Ya hay un Cargo registrado con el mismo nombre ''{0}''.
