cambios fecha "2019-10-26" 9:45 pm ....

--- a/heystyles-usuarios-api/src/main/resources/messages.properties
+++ b/heystyles-usuarios-api/src/main/resources/messages.properties
@@ -16,3 +16,4 @@ heystyles.usuarios.usuario.not-found=No se encontro el usuario con id ''{0}''.
 heystyles.persona.numero-documento.duplicated=Ya hay una Persona registrada con el mismo numero de documento ''{0}''.
 heystyles.persona.email.duplicated=Ya hay una Persona registrada con el mismo email ''{0}''.
 heystyles.cargo.nombre.duplicated=Ya hay un Cargo registrado con el mismo nombre ''{0}''.
+heystyles.cargo.usuarios-referenciados.not-delete=No se puede eliminar el cargo, porque aun hay ''{0}'' Usuarios, con el cargo ''{1}'' referenciado.
