--- a/heystyles-usuarios-api/src/main/resources/messages.properties
+++ b/heystyles-usuarios-api/src/main/resources/messages.properties
@@ -17,3 +17,4 @@ heystyles.persona.numero-documento.duplicated=Ya hay una Persona registrada con 
 heystyles.persona.email.duplicated=Ya hay una Persona registrada con el mismo email ''{0}''.
 heystyles.cargo.nombre.duplicated=Ya hay un Cargo registrado con el mismo nombre ''{0}''.
 heystyles.cargo.usuarios-referenciados.not-delete=No se puede eliminar el cargo, porque aun hay ''{0}'' Usuarios, con el cargo ''{1}'' referenciado.
+heystyles.persona.numero-documento.not-found=No se encontro la Persona con numero de documento ''{0}''.
