cambios fecha "2019-10-28" 02:58 pm ....

--- a/heystyles-usuarios-api/src/main/resources/messages.properties
+++ b/heystyles-usuarios-api/src/main/resources/messages.properties
@@ -18,3 +18,4 @@ heystyles.persona.email.duplicated=Ya hay una Persona registrada con el mismo em
 heystyles.cargo.nombre.duplicated=Ya hay un Cargo registrado con el mismo nombre ''{0}''.
 heystyles.cargo.usuarios-referenciados.not-delete=No se puede eliminar el cargo, porque aun hay ''{0}'' Usuarios, con el cargo ''{1}'' referenciado.
 heystyles.persona.numero-documento.not-found=No se encontro la Persona con numero de documento ''{0}''.
+heystyles.usuarios.cuenta-banco.not-found=No se encontro la Cuenta de Banco con id ''{0}''.
