controller cuentas de banco, contactos.

--- a/heystyles-usuarios-api/src/main/resources/messages.properties
+++ b/heystyles-usuarios-api/src/main/resources/messages.properties
@@ -19,4 +19,5 @@ heystyles.cargo.nombre.duplicated=Ya hay un Cargo registrado con el mismo nombre
 heystyles.cargo.usuarios-referenciados.not-delete=No se puede eliminar el cargo, porque aun hay ''{0}'' Usuarios, con el cargo ''{1}'' referenciado.
 heystyles.persona.numero-documento.not-found=No se encontro la Persona con numero de documento ''{0}''.
 heystyles.usuarios.cuenta-banco.not-found=No se encontro la Cuenta de Banco con id ''{0}''.
-heystyles.usuarios.usuario-numero-document.not-found=No se encontro un usuario con el numero de documento ''{0}''
+heystyles.usuarios.usuario-numero-document.not-found=No se encontro un usuario con el numero de documento ''{0}''.
+heystyles.usuarios.proveedor-persona.not-found=No se encontro la Persona Proveedor con id ''{0}''.
