--- a/heystyles-usuarios-api/src/main/resources/messages.properties
+++ b/heystyles-usuarios-api/src/main/resources/messages.properties
@@ -21,3 +21,4 @@ heystyles.persona.numero-documento.not-found=No se encontro la Persona con numer
 heystyles.usuarios.cuenta-banco.not-found=No se encontro la Cuenta de Banco con id ''{0}''.
 heystyles.usuarios.usuario-numero-document.not-found=No se encontro un usuario con el numero de documento ''{0}''.
 heystyles.usuarios.proveedor-persona.not-found=No se encontro la Persona Proveedor con id ''{0}''.
+heystyles.usuarios.usuario-gerente.not-delete=No se puede eliminar un usuario con cargo gerente.
